--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service serve",
-    "dev": "vue-cli-service serve --open",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "vue-cli-service serve --open",
+    "start": "vue-cli-service serve"
   },
   "dependencies": {
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
     "qiankun": "^2.10.5",
+    "requset": "0.0.1-security",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5"
   },
@@ -21,10 +22,13 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.79.0",
+    "webpack-cli": "^5.0.1"
   },
   "eslintConfig": {
     "root": true,
