--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "vue-cli-service serve"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
     "qiankun": "^2.10.5",
@@ -24,8 +25,12 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "css-loader": "^6.7.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1"
