--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "qiankun": "^2.10.5",
     "requset": "0.0.1-security",
     "vue": "^2.6.14",
-    "vue-router": "^3.6.5"
+    "vue-router": "^3.6.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
