--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
     "qiankun": "^2.10.5",
     "requset": "0.0.1-security",
     "vue": "^2.6.14",
+    "vue-element-multiple-message": "^1.0.1",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
   },
@@ -32,9 +34,7 @@
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.79.0",
-    "webpack-cli": "^5.0.1"
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
