--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
+    "html2canvas": "^1.4.1",
     "qiankun": "^2.10.5",
     "requset": "0.0.1-security",
     "vue": "^2.6.14",
