add pc h5 two view change.

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@types/ua-parser-js": "^0.7.36",
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
     "html2canvas": "^1.4.1",
     "qiankun": "^2.10.5",
     "requset": "0.0.1-security",
+    "ua-parser-js": "^1.0.35",
     "vue": "^2.6.14",
     "vue-element-multiple-message": "^1.0.1",
     "vue-router": "^3.6.5",
